--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,22 @@ body {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+h1 {
+  color: #1a202c;
+  font-family: "DM Serif Display", serif;
+}
+
+.bold {
+  font-weight: 500;
+}
+
 p,
+li,
+h4,
 h5,
 h6 {
   font-weight: 400;
+  line-height: 1.5;
 }
 
 .nav-btn-link {
@@ -54,5 +66,23 @@ h6 {
 
 .badge-1 {
   background-color: #9272f0;
+}
+
+.flex-column {
+  max-width: 300px;
+}
+
+.flex-column img .scale:hover {
+  -webkit-transform: scaleY(1.05);
+          transform: scaleY(1.05);
+  padding-top: 5px;
+}
+
+.btn-dark {
+  background-color: #000;
+}
+
+.head {
+  font-weight: 700;
 }
 /*# sourceMappingURL=App.css.map */
