--- a/src/App.scss
+++ b/src/App.scss
@@ -18,13 +18,22 @@ body {
 }
 .my-img {
   border-radius: 15px;
-
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+h1 {
+  color: #1a202c;
+  font-family: $font-2;
+}
+.bold {
+  font-weight: 500;
+}
 p,
+li,
+h4,
 h5,
 h6 {
   font-weight: 400;
+  line-height: 1.5;
 }
 .nav-btn-link {
   transition: all 0.2s;
@@ -49,4 +58,21 @@ h6 {
 }
 .badge-1 {
   background-color: $badge-color-1;
+}
+
+.flex-column {
+  max-width: 300px;
+  img {
+    .scale:hover {
+      transform: scaleY(1.05);
+      padding-top: 5px;
+    }
+  }
+}
+
+.btn-dark {
+  background-color: #000;
+}
+.head {
+  font-weight: 700;
 }
