--- a/src/App.css
+++ b/src/App.css
@@ -72,10 +72,19 @@ h6 {
   max-width: 300px;
 }
 
-.flex-column img .scale:hover {
-  -webkit-transform: scaleY(1.05);
-          transform: scaleY(1.05);
+.flex-column img {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.flex-column img:hover {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
   padding-top: 5px;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .btn-dark {
