--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,7 @@ h6 {
 .gray-img {
   transition: all 0.5s;
   filter: grayscale(100%);
+
   &:hover {
     filter: grayscale(0%);
   }
@@ -63,9 +64,12 @@ h6 {
 .flex-column {
   max-width: 300px;
   img {
-    .scale:hover {
-      transform: scaleY(1.05);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.4s;
+    &:hover {
+      transform: scale(0.9);
       padding-top: 5px;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     }
   }
 }
