--- a/src/App.scss
+++ b/src/App.scss
@@ -3,14 +3,24 @@
 
 $font-1: "Roboto", sans-serif;
 $font-2: "DM Serif Display", serif;
-$color-1: #fefaf6;
-$color-2: #f0f2f5;
+$color-1: #141720;
+$color-2: #dfdfdf;
+$color-3: #d6d6d6;
+$color-4: #bdbdbd;
 $badge-color-1: #b59dff;
 
 body {
   font-family: $font-1;
   font-weight: 500;
   background-color: $color-1;
+}
+
+h1,
+h2,
+h3 {
+  font-family: $font-2;
+  font-weight: 700;
+  color: $color-2;
 }
 
 .intro {
@@ -21,7 +31,6 @@ body {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 h1 {
-  color: #1a202c;
   font-family: $font-2;
 }
 .bold {
@@ -41,7 +50,9 @@ h6 {
     background-color: $color-2;
   }
 }
-
+.card {
+  background-color: $color-2;
+}
 .rounded-5 {
   border-radius: 20px;
 }
@@ -57,10 +68,14 @@ h6 {
   border-radius: 6px !important;
   padding: 5px 8px;
   background-color: $badge-color-1;
+  color: $color-1;
+  &:hover {
+    color: $color-1;
+  }
 }
 
 .custom-underline {
-  background: linear-gradient(transparent 70%, $badge-color-1 30%);
+  background: linear-gradient(transparent 70%, #9213e8 30%);
   display: inline;
   margin-top: 50px;
   padding-bottom: 0;
@@ -83,9 +98,29 @@ h6 {
   }
 }
 
+.btn-light {
+  background-color: $color-3;
+}
 .btn-dark {
-  background-color: #000;
+  background-color: $color-1;
+}
+
+.text-light {
+  color: $color-2 !important;
 }
 .head {
   font-weight: 700;
+}
+
+.about-title {
+  color: $color-4 !important;
+}
+
+.btn-custom-1 {
+  background-color: $color-2;
+  color: $color-1;
+  &:hover {
+    background-color: $color-4;
+    color: $color-1;
+  }
 }
