--- a/src/App.scss
+++ b/src/App.scss
@@ -73,12 +73,18 @@ h6 {
     color: $color-1;
   }
 }
+.badge-dark {
+  &:hover {
+    background-color: #141720;
+    color: #fff;
+  }
+}
 
 .custom-underline {
   background: linear-gradient(transparent 70%, #9213e8 30%);
   display: inline;
   margin-top: 50px;
-  padding-bottom: 0;
+  padding: 3px 12px;
   /*@include mq('sp') {
       font-size: $size-subTitle-sp;
       margin-top: 30px;
