Added Experience, and refeactored code

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   background-color: #141720;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 h1,
@@ -65,6 +67,11 @@ h6 {
 .badge-dark:hover {
   background-color: #141720;
   color: #fff;
+}
+
+.badge-light:hover {
+  background-color: #dfdfdf;
+  color: #141720;
 }
 
 .custom-underline {
