Added Sponsor Page

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ $badge-color-1: #b59dff;
 body {
   font-family: $font-1;
   font-weight: 500;
-  // background-color: $color-1;
+  background-color: $color-1;
   background-image: url("./assets/background.png");
   background-repeat: no-repeat;
   background-size: cover;
