--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,12 @@ $badge-color-1: #b59dff;
 body {
   font-family: $font-1;
   font-weight: 500;
-  background-color: $color-1;
-  background-image: url("./assets/background.png");
+  background: rgb(31, 0, 68);
+  background: linear-gradient(
+    194deg,
+    rgba(31, 0, 68, 1) 0%,
+    rgba(19, 0, 50, 1) 100%
+  );
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -48,12 +52,7 @@ h3 {
 .my-img {
   // border-radius: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  border: none;
-  //////////////
-  --squircle-smooth: 0.8;
-  --squircle-radius: 20px;
-  // border: 4px solid $badge-color-1;
-  mask-image: paint(squircle);
+  border-radius: 25px;
 }
 h1 {
   font-family: $font-2;
